--- a/style.css
+++ b/style.css
@@ -46,3 +46,14 @@ footer {
   background-color: #eee;
   margin-top: 2rem;
 }
+.container {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.container > div {
+  flex: 1;
+  min-width: 300px;
+}
