--- a/style.css
+++ b/style.css
@@ -135,3 +135,21 @@ body.dark h2,
 body.dark h3 {
   color: #4da3ff;
 }
+
+/* footer umum */
+#mainFooter {
+  width: 100%;
+  padding: 1rem 0;
+  text-align: center;
+  background-color: #eeeeee;
+  color: #333;
+  margin-top: 2rem;         /* jarak atas */
+  box-shadow: 0 -1px 4px rgba(0,0,0,0.1);
+}
+
+/* footer di Dark Mode */
+body.dark #mainFooter {
+  background-color: #1e1e1e;
+  color: #bfbfbf;
+  box-shadow: 0 -1px 4px rgba(0,0,0,0.6);
+}
